--- a/ieclub-taro/src/pages/topics/create/index.scss
+++ b/ieclub-taro/src/pages/topics/create/index.scss
@@ -1,24 +1,38 @@
-.topic-create-page {
+.page {
   min-height: 100vh;
   background: #f5f5f5;
-  padding: 120px 32px;
 
-  .back-btn {
-    position: fixed;
-    top: 48px;
-    left: 32px;
-    width: 64px;
-    height: 64px;
+  .nav-bar {
+    height: 88px;
+    background: #ffffff;
     display: flex;
     align-items: center;
-    justify-content: center;
-    background: rgba(255, 255, 255, 0.9);
-    border-radius: 50%;
-    z-index: 999;
+    padding: 0 32px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
 
-    .iconify-icon {
-      font-size: 40px;
+    .back-btn {
+      margin-right: 24px;
+
+      .iconify-icon {
+        font-size: 48px;
+        color: #333;
+      }
+    }
+
+    .title {
+      font-size: 36px;
+      font-weight: bold;
       color: #333;
+    }
+  }
+
+  .content {
+    padding: 40px;
+    text-align: center;
+
+    .coming-soon {
+      font-size: 28px;
+      color: #999;
     }
   }
 }
